# PdfAgent-Agentic-RAG-over-any-PDF

./: .gitignore  PROJECT_DOCUMENTATION.md  PUBLISHING.md  README.md  SUMMARY.md  app.py  generate_workflow_png.py  main.py  pdfagent_cli.py  preprocessing.py  pyproject.toml  requirements.txt  workflow.mmd
.github/workflows/: publish.yml
agents/: __init__.py  memory_agent.py  planner.py  query_understanding.py  reasoning.py  retrieval.py  table_agent.py  validation.py
config/: settings.py
data/pdfs/: README.txt
docs/: ARCHITECTURE.md
evaluation/: __init__.py  build_gold_dataset.py  custom_eval.py  ragas_eval.py  retrieval_eval.py
graph/: __init__.py  checkpointer.py  state.py  workflow.py
ingestion/: __init__.py  contextualizer.py  image_extractor.py  ocr_engine.py  pdf_processor.py  preprocessor.py  schema_catalog.py  table_extractor.py
retrieval/: __init__.py  bm25_retriever.py  chunking.py  hybrid.py  raptor.py  reranker.py  vector_store.py
static/: app.js  index.html  style.css
storage/: __init__.py  schema_manager.py  sql_store.py
utils/: __init__.py  cache.py  embeddings.py  llm.py  logging_config.py
